Problemas enregadas ver juegos
El player no llega actualizado por lo que no muestra las partidas recientemente agregadas